--- a/index.html
+++ b/index.html
@@ -27,28 +27,24 @@
                     <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
                 </ul>
             </nav>
-            <div class="header-contacts">
                 <ul class="header-contacts-list list">
                     <li class="header-contact-item"><a href="mailto:info@devstudio.com"
                             class="header-contact link">info@devstudio.com</a></li>
                     <li class="header-contact-item mail"><a href="tel:+380961111111" class="header-contact link">+38 096
                             111 11 11</a></li>
                 </ul>
-            </div>
         </div>
     </header>
     <main>
         <section class="hero">
             <div class="container">
-                <div class="hero-content">
                     <h1 class="hero-title">
                         Эффективные решения для вашего бизнеса
                     </h1>
                     <button type="button" class="hero-btn btn">Заказать услугу</button>
-                </div>
             </div>
         </section>
-        <section class="features">
+        <section class="features section">
             <div class="container">
                 <h2 class="visually-hidden">Особенности</h2>
                 <ul class="about-list list">
@@ -76,7 +72,7 @@
                 </ul>
             </div>
         </section>
-        <section class="about-us">
+        <section class="about-us section">
             <div class="container">
                 <h2 class="about-us-title title">Чем мы занимаемся</h2>
                 <ul class="about-us-list list">
@@ -90,53 +86,37 @@
                 </ul>
             </div>
         </section>
-        <section class="team">
+        <section class="team section">
             <div class="container">
                 <h2 class="team-title title">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-item">
-                        <article class="team-card-full">
-                            <div class="team-card">
                                 <img src="./images/img3.jpg" alt="a man" width="270" height="260" />
-                            </div>
                             <div class="team-card-content">
                                 <h3 class="team-name">Игорь Демьяненко</h3>
                                 <p class="team-text">Product Designer</p>
                             </div>
-                        </article>
                     </li>
                     <li class="team-item">
-                        <article class="team-card-full">
-                            <div class="team-card">
                                 <img src="./images/img1).jpg" alt="a woman" width="270" height="260" />
-                            </div>
                             <div class="team-card-content">
                                 <h3 class="team-name">Ольга Репина</h3>
                                 <p class="team-text">Frontend Developer</p>
                             </div>
-                        </article>
                     </li>
                     <li class="team-item">
-                        <article class="team-card-full">
-                            <div class="team-card">
                                 <img src="./images/cardn3.jpg" alt="a man in shirt" width="270" height="260" />
-                            </div>
                             <div class="team-card-content">
                                 <h3 class="team-name">Николай Тарасов</h3>
                                 <p class="team-text">Marketing</p>
                             </div>
-                        </article>
                     </li>
                     <li class="team-item">
-                        <article class="team-card-full">
-                            <div class="team-card">
                                 <img src="./images/img(3).jpg" alt="a man with glasses" width="270" height="260" />
-                            </div>
                             <div class="team-card-content">
                                 <h3 class="team-name">Михаил Ермаков</h3>
                                 <p class="team-text">UI Designer</p>
                             </div>
-                        </article>
                     </li>
                 </ul>
             </div>
