--- a/portfolio.html
+++ b/portfolio.html
@@ -28,19 +28,16 @@
                     <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
                 </ul>
             </nav>
-            <div class="header-contacts">
                 <ul class="header-contacts-list list">
                     <li class="header-contact-item"><a href="mailto:info@devstudio.com"
                             class="header-contact link">info@devstudio.com</a></li>
                     <li class="header-contact-item mail"><a href="tel:+380961111111" class="header-contact link">+38 096
                             111 11 11</a></li>
                 </ul>
-            </div>
         </div>
     </header>
-    </header>
     <main>
-        <section class="projects">
+        <section class="projects section">
             <div class="container">
                 <h1 class="visually-hidden">Проекты</h1>
                 <ul class="projects-btn-list list">
