--- a/portfolio.html
+++ b/portfolio.html
@@ -23,17 +23,25 @@
             <nav><a href="./index.html" lang="en" class="header-logo"><span class="logo-web">Web</span>Studio</a>
                 <ul class="header-list list">
                     <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
-                    <li class="header-item"><a href="./portfolio.html" class="header-link link current">Портфолио</a>
-                    </li>
+                    <li class="header-item"><a href="./portfolio.html" class="header-link link current">Портфолио</a></li>
                     <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
                 </ul>
             </nav>
-                <ul class="header-contacts-list list">
-                    <li class="header-contact-item"><a href="mailto:info@devstudio.com"
-                            class="header-contact link">info@devstudio.com</a></li>
-                    <li class="header-contact-item mail"><a href="tel:+380961111111" class="header-contact link">+38 096
-                            111 11 11</a></li>
-                </ul>
+            <ul class="header-contacts-list list">
+                <li class="header-contact-item">
+                    <a href="mailto:info@devstudio.com" class="header-contact link">
+                        <svg class="contacts-icon" width="16" height="12">
+                            <use href="./images/icons.svg#icon-mail"></use>
+                        </svg>info@devstudio.com</a>
+                </li>
+                <li class="header-contact-item mail">
+                    <a href="tel:+380961111111" class="header-contact link">
+                        <svg class="contacts-icon" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>+38 096
+                        111 11 11</a>
+                </li>
+            </ul>
         </div>
     </header>
     <main>
