--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,8 @@
             <nav><a href="./index.html" lang="en" class="header-logo"><span class="logo-web">Web</span>Studio</a>
                 <ul class="header-list list">
                     <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
-                    <li class="header-item"><a href="./portfolio.html" class="header-link link current">Портфолио</a></li>
+                    <li class="header-item"><a href="./portfolio.html" class="header-link link current">Портфолио</a>
+                    </li>
                     <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
                 </ul>
             </nav>
@@ -59,98 +60,99 @@
                 <ul class="projects-list list">
                     <li class="projects-item">
                         <article class="card">
-                            <div class="card-thumb">
                                 <a rel="preconnect" href="https://www.google.com/">
                                     <img src="./images/laptop.jpg" alt="laptop" width="370" height="294"></a>
-                            </div>
                             <div class="card-content">
+                                <a rel="preconnect" href="https://www.google.com/">
                                 <h2 class="projects-title">
                                     Технокряк
                                 </h2>
                                 <p class="projects-text">Веб-сайт</p>
+                                </a>
                             </div>
                         </article>
                     </li>
                     <li class="projects-item">
                         <article class="card">
-                            <div class="card-thumb">
                                 <a rel="preconnect" href="https://www.google.com/"><img src="./images/basket.jpg"
                                         alt="basketball" width="370" height="294"></a>
-                            </div>
                             <div class="card-content">
+                                <a rel="preconnect" href="https://www.google.com/">
                                 <h2 class="projects-title">
                                     Постер New Orlean vs Golden Star
                                 </h2>
                                 <p class="projects-text">Дизайн</p>
+                                </a>
                             </div>
                         </article>
                     </li>
                     <li class="projects-item">
-                        <article class="card">
-                            <div class="card-thumb"><a rel="preconnect" href="https://www.google.com/"><img
+                        <article class="card"><a rel="preconnect" href="https://www.google.com/"><img
                                         src="./images/fish.jpg" alt="a fish" width="370" height="294"></a>
-                            </div>
                             <div class="card-content">
+                                <a rel="preconnect" href="https://www.google.com/">
                                 <h2 class="projects-title">
                                     Ресторан Seafood
                                 </h2>
                                 <p class="projects-text">Приложение</p>
+                                </a>
                             </div>
                         </article>
                     </li>
                     <li class="projects-item">
                         <article class="card">
-                            <div class="card-thumb">
-                                <a rel="preconnect" href="https://www.google.com/"><img src="./images/headphones.jpg"
-                                        alt="headphones" width="370" height="294"></a>
-                            </div>
+                            <a rel="preconnect" href="https://www.google.com/"><img src="./images/headphones.jpg"
+                                    alt="headphones" width="370" height="294"></a>
                             <div class="card-content">
+                                <a rel="preconnect" href="https://www.google.com/">
                                 <h2 class="projects-title">
                                     Проект Prime
                                 </h2>
                                 <p class="projects-text">Маркетинг</p>
+                                </a>
                             </div>
                         </article>
                     </li>
                     <li class="projects-item">
                         <article class="card">
-                            <div class="card-thumb">
-                                <a rel="preconnect" href="https://www.google.com/"><img src="./images/bricks.jpg"
-                                        alt="bricks" width="370" height="294"></a>
-                            </div>
+                            <a rel="preconnect" href="https://www.google.com/"><img src="./images/bricks.jpg"
+                                    alt="bricks" width="370" height="294"></a>
                             <div class="card-content">
+                                <a rel="preconnect" href="https://www.google.com/">
                                 <h2 class="projects-title">
                                     Проект Boxes
                                 </h2>
                                 <p class="projects-text">Приложение</p>
+                                </a>
                             </div>
                         </article>
                     </li>
                     <li class="projects-item">
                         <article class="card">
-                            <div class="card-thumb"><a rel="preconnect" href="https://www.google.com/"><img
-                                        src="./images/mac.jpg" alt="mac" width="370" height="294">
-                                </a>
-                            </div>
+                            <a rel="preconnect" href="https://www.google.com/"><img src="./images/mac.jpg" alt="mac"
+                                    width="370" height="294">
+                            </a>
                             <div class="card-content">
+                                <a rel="preconnect" href="https://www.google.com/">
                                 <h2 class="projects-title">
                                     Inspiration has no Borders
                                 </h2>
                                 <p class="projects-text">Веб-сайт</p>
+                                </a>
                             </div>
                         </article>
                     </li>
                     <li class="projects-item">
-                        <article class="card">
-                            <div class="card-thumb"><a rel="preconnect" href="https://www.google.com/"><img
+                        <article class="card"><a rel="preconnect" href="https://www.google.com/"><img
                                         src="./images/book.jpg" alt="a book" width="370" height="294">
                                 </a>
-                            </div>
                             <div class="card-content">
+                                <a rel="preconnect" href="https://www.google.com/">
                                 <h2 class="projects-title">
                                     Издание Limited Edition
                                 </h2>
                                 <p class="projects-text">Дизайн</p>
+                            </a>
                             </div>
                         </article>
                     </li>
@@ -161,10 +163,12 @@
                                 </a>
                             </div>
                             <div class="card-content">
+                                <a rel="preconnect" href="https://www.google.com/">
                                 <h2 class="projects-title">
                                     Проект LAB
                                 </h2>
                                 <p class="projects-text">Маркетинг</p>
+                                </a>
                             </div>
                         </article>
                     </li>
@@ -175,10 +179,12 @@
                                 </a>
                             </div>
                             <div class="card-content">
+                                <a rel="preconnect" href="https://www.google.com/">
                                 <h2 class="projects-title">
                                     Growing Business
                                 </h2>
                                 <p class="projects-text">Приложение</p>
+                                </a>
                             </div>
                         </article>
                     </li>
@@ -188,17 +194,53 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a href="./index.html" lang="en" class="footer-logo"><span class="logo-web">Web</span>Studio</a>
-            <address class="address">
-                <ul class="address-list list">
-                    <li class="address-item"><a href="https://bit.ly/3pXMvUd" target="_blank"
-                            class="address-address link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li class="address-item"><a href="mailto:info@example.com"
-                            class="address-link link">info@example.com</a></li>
-                    <li class="address-item"><a href="tel:+380991111111" class="address-link link">+38 099 111 11 11</a>
+            <div class="footer-address-container">
+                <a href="./index.html" lang="en" class="footer-logo"><span class="logo-web">Web</span>Studio</a>
+                <address class="address">
+                    <ul class="address-list list">
+                        <li class="address-item"><a href="https://bit.ly/3pXMvUd" target="_blank"
+                                class="address-address link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li class="address-item"><a href="mailto:info@example.com"
+                                class="address-link link">info@example.com</a></li>
+                        <li class="address-item"><a href="tel:+380991111111" class="address-link link">+38 099 111 11
+                                11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-container">
+                <h3 class="footer-title">присоединяйтесь</h3>
+                <ul class="footer-list list">
+                    <li class="footer-item item">
+                        <a href="" class="footer-link link">
+                            <svg class="footer-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-item item">
+                        <a href="" class="footer-link link">
+                            <svg class="footer-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-item item">
+                        <a href="" class="footer-link link">
+                            <svg class="footer-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-item item">
+                        <a href="" class="footer-link link">
+                            <svg class="footer-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
